--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "data_structures_and_algorithms",
-  "version": "1.0.0",
-  "description": "website for the data structures and algorithms details and explanations",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "jstransformer-markdown-it": "^2.1.0",
-    "pug": "^3.0.2"
-  }
+	"name": "data_structures_and_algorithms",
+	"version": "1.0.0",
+	"description": "website for the data structures and algorithms details and explanations",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
+	},
+	"engines": {
+		"node": "12.16.1",
+		"npm": "6.13.4"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.17.1",
+		"jstransformer-markdown-it": "^2.1.0",
+		"pug": "^3.0.2"
+	}
 }
